[gd_scene load_steps=11 format=2]

[ext_resource path="res://car/BaseCar.gd" type="Script" id=1]
[ext_resource path="res://assets/hp-bar.png" type="Texture" id=2]
[ext_resource path="res://car/WheelWithDull.tscn" type="PackedScene" id=3]
[ext_resource path="res://sphere.png" type="Texture" id=4]
[ext_resource path="res://assets/motor.ogg" type="AudioStream" id=5]

[sub_resource type="ConvexPolygonShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 104.961, 71.6538 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.0954545, 0.152273, 0.268182, 1 )
colors = PoolColorArray( 1, 0.855469, 0, 1, 1, 0.862745, 0.054902, 0, 0.67451, 0.67451, 0.67451, 0, 0.705882, 0.705882, 0.705882, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 2.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.5
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.3
scale_random = 0.15
color_ramp = SubResource( 4 )

[node name="BaseCar" type="RigidBody2D"]
collision_mask = 6
continuous_cd = 1
script = ExtResource( 1 )

[node name="UI" type="Node2D" parent="."]

[node name="HP" type="TextureProgress" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -127.868
margin_right = 50.0
margin_bottom = -122.868
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 0, 0, 1 )
tint_progress = Color( 0, 1, 0, 1 )

[node name="Nitro" type="TextureProgress" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -135.462
margin_right = 50.0
margin_bottom = -130.462
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 0, 0, 0 )
tint_progress = Color( 0, 0.505882, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BulletCooldown" type="Timer" parent="."]
one_shot = true

[node name="Cannon" type="Node2D" parent="."]
position = Vector2( 107.047, -27.9137 )
z_index = 1

[node name="BackWheel" parent="." instance=ExtResource( 3 )]
position = Vector2( -66, 40 )

[node name="FrontWheel" parent="." instance=ExtResource( 3 )]
position = Vector2( 78, 40 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="NitroParticles" type="Particles2D" parent="."]
position = Vector2( -84.2441, -2.5094 )
rotation = -3.14323
emitting = false
amount = 100
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 4 )

[node name="MotorSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
